# beginner_tutorials

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/cpp_pubsub/include/cpp_pubsub/cpp_pubsub/srv/: modify_message.h  modify_message.hpp
install/cpp_pubsub/include/cpp_pubsub/cpp_pubsub/srv/detail/: modify_message__builder.hpp  modify_message__functions.c  modify_message__functions.h  modify_message__rosidl_typesupport_introspection_c.h  modify_message__rosidl_typesupport_introspection_cpp.hpp  modify_message__traits.hpp  modify_message__type_support.h
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/local/lib/python3.10/dist-packages/cpp_pubsub/: _cpp_pubsub_s.ep.rosidl_typesupport_c.c  _cpp_pubsub_s.ep.rosidl_typesupport_fastrtps_c.c  _cpp_pubsub_s.ep.rosidl_typesupport_introspection_c.c
install/cpp_pubsub/local/lib/python3.10/dist-packages/cpp_pubsub/srv/: __init__.py
install/cpp_pubsub/share/ament_index/resource_index/rosidl_interfaces/: cpp_pubsub
install/cpp_pubsub/share/cpp_pubsub/: package.sh
install/cpp_pubsub/share/cpp_pubsub/cmake/: cpp_pubsub__rosidl_typesupport_cppExport.cmake  cpp_pubsub__rosidl_typesupport_introspection_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/cpp_pubsub/share/cpp_pubsub/srv/: ModifyMessage_Request.msg
launch/: cpp_pubsub_launch.py  rosbag_launch.py
log/: latest_build
outputs/: checkoutput.txt  frames_2023-11-29_22.07.40.gv  lintoutput.txt  lintoutputcorrected.txt
rosbag2_2023_11_29-22_08_48/: rosbag2_2023_11_29-22_08_48_0.db3
src/: publisher_member_function.cpp  subscriber_member_function.cpp
test/: integration_tests.cpp
